# decky-music

./: .gitattributes  .gitignore  .mise.toml  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Decky Music Spotify 集成方案.md  Dockerfile  LICENSE  MULTI_PROVIDER_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_EN.md  build.sh  decky.pyi  eslint.config.js  eslint.config.ts  main.py  package.json  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  rollup.config.ts  tsconfig.json  tsconfig.node.json
.github/workflows/: build.yml  release.yml
backend/: __init__.py  config_manager.py  lyric_parser.py  qqmusic.py  test_lyric_parser.py  types.py  update_checker.py  util.py
backend/providers/: __init__.py  base.py  fallback_matcher.py  manager.py  netease.py  netease_batch.py  qqmusic.py  spotify.py
docs/: DESIGN.md  PROVIDER-APIS.md  QUEUE-BEHAVIOR.md  ROADMAP.md  STEAM-MENU-INJECT.md  performance-interaction-review-2026-02-08.md  player-refactor-plan.md
docs/ui-design/: BUILD-PLAN.md  README.md
ncm-provider/: Cargo.toml
ncm-provider/src/: commands.rs  content.rs  logging.rs  login.rs  lyric.rs  main.rs  protocol.rs  provider_commands.rs  state.rs
ncm-provider/src/provider_commands/: comments.rs  details.rs  library.rs  radio.rs  search.rs
player/: Cargo.toml
player/src/: audio.rs  logging.rs  main.rs  mpris.rs  protocol.rs  socket.rs  stream.rs  util.rs
providers/: __init__.py  base.py  qqmusic.py
py_modules/: README.md  bridge.py  log.py  playback.py  protocol.py
py_modules/aiocache-0.12.3.dist-info/: RECORD
py_modules/httpx-0.28.1.dist-info/: RECORD
py_modules/qqmusic_api_python-0.3.6.dist-info/: RECORD
qq-provider/: log.py  main.py  protocol.py  pyproject.toml  qq.py
qq-provider/qq/: __init__.py  account.py  details.py  library.py  login.py  lyric.py  playback.py  playlist.py  radio.py  recommend.py  search.py  top.py
qq-provider/tests/: test_login.py  test_lyric.py  test_protocol.py  test_provider_commands.py
scripts/: build-qq-provider.sh  build-rust.sh  cn-package.sh  deploy.sh  full-package.sh  qq-build.Dockerfile  release-cn.sh  rust-build.Dockerfile
scripts/cdp/: README.md  cdp-console.mjs  cdp-key.mjs  cdp-lib.mjs  cdp-lib.test.mjs  cdp-nav.mjs  cdp-shot.mjs  cdp.mjs  probe-mainmenu.js  probe-menu-items.js
src/: Boundary.tsx  ErrorBanner.tsx  Footer.tsx  Page.tsx  ProviderPage.tsx  QAM.tsx  api.ts  errors.ts  i18n.ts  index.tsx  steamMenu.ts  types.d.ts
src/api/: README.md  index.ts
src/components/: BackButton.tsx  EmptyState.tsx  FocusableList.tsx  HistoryPage.tsx  HomePage.tsx  LoadingSpinner.tsx  LoginPage.tsx  PlayAllButton.tsx  PlayerBar.tsx  PlayerPage.tsx  PlaylistDetailPage.tsx  PlaylistsPage.tsx  ProviderSettingsPage.tsx  README.md  Router.tsx  SafeImage.tsx  SearchPage.tsx  SettingsPage.tsx  SongItem.tsx  SongList.tsx  SpotifyProvider.tsx  index.ts
src/features/: README.md  index.ts
src/hooks/: README.md  playerAudio.ts  playerControls.ts  playerHooks.ts  playerMethods.ts  playerNavigation.ts  playerQueue.ts  playerSettings.ts  playerShuffle.ts  playerState.ts  useAppLogic.ts  useDebounce.ts  (+10 more)
tests/: i18n.test.mjs  pageFocus.test.mjs  test_clear_data.py  test_log_clear.py  test_playback.py  test_player_spawn.py  test_protocol.py  test_qq_unpack.py  test_settings.py
(+156 files in other folders)
